<?xml version="1.0" encoding="utf-8"?>

<!--
    ************************ Assignment #HOMEWORK 01 *******************************************
    *********************** File Name- activity_main.xml *************************************
    ************************ Full Name- 1. Manali Ghare 2. Anup Deshpande (Group 19) ***********
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/size_label"
        app:layout_constraintTop_toBottomOf="@+id/save_btn">


        <RadioButton
            android:id="@+id/r_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_btn1"
            />

        <RadioButton
            android:id="@+id/r_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="@string/radio_btn2" />

        <RadioButton
            android:id="@+id/r_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="@string/radio_btn3" />

    </RadioGroup>

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="15dp"
        android:text="@string/wt_label"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight"
        app:layout_constraintEnd_toStartOf="@+id/weight"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Enter Weight"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/gender_label"
        app:layout_constraintStart_toEndOf="@+id/weight_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginLeft="10dp"
        android:text="@string/gender_label"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weight" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="105dp"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/size"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_btn" />

    <TextView
        android:id="@+id/alcohol_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/alcohol_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_label" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="42dp"
        app:layout_constraintLeft_toRightOf="@id/alcohol_label"
        app:layout_constraintTop_toBottomOf="@id/size_label"
        android:min="5"
        android:max="25"
        style="@style/Base.Widget.AppCompat.SeekBar.Discrete"
        />

    <TextView
        android:id="@+id/percent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:text="5%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@id/seekBar"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/size_label" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:text="@string/add_label"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_label" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:text="@string/reset_label"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/add_btn"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:text="BAC Level :"
        android:textAlignment="center"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:max="25"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/status_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <TextView
        android:id="@+id/verdict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="You're safe"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/status_label"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <Switch
        android:id="@+id/gender_switch"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="48dp"
        android:showText="true"
        android:textAllCaps="false"
        android:textSize="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/gender_label"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>